# vql

./: CMakeLists.txt  main.cpp  vqlcompiler.cpp  vqlcompiler.h
